完善了注册和退出

--- a/SmartyOperation/tpl/bookList.html
+++ b/SmartyOperation/tpl/bookList.html
@@ -11,6 +11,7 @@
 <div class="container">
 	<div>
 		<a class="btn btn-primary" href="bookList.php?controller=book&method=bookAdd">添加书籍</a>
+		<a class="btn btn-warning" href="bookList.php?controller=admin&method=loginOut">退出</a>
 	</div>
 	<br>
 	<table class="table table-bordered">
